# scala-compiler-plugin-example

./: .bazelrc  README.md  WORKSPACE
divbyzero-plugin/src/: BUILD.bazel
divbyzero-plugin/src/com/example/: DivByZero.scala
divbyzero-plugin/src/resources/: scalac-plugin.xml
example-for-plugin/src/: BUILD.bazel
example-for-plugin/src/com/example/: Test.scala
